crates/parser/src/snapshots/parser__latex__tests__parse@group__curly_group_missing_end.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/group/curly_group_missing_end.txt
---
ROOT@0..12
  PREAMBLE@0..12
    CURLY_GROUP@0..12
      L_CURLY@0..1 "{"
      TEXT@1..12
        WORD@1..6 "hello"
        WHITESPACE@6..7 " "
        WORD@7..12 "world"

