crates/parser/src/snapshots/parser__latex__tests__parse@group__escaped_brackets.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/group/escaped_brackets.txt
---
ROOT@0..6
  PREAMBLE@0..6
    CURLY_GROUP@0..3
      L_CURLY@0..1 "{"
      MIXED_GROUP@1..2
        L_BRACK@1..2 "["
      R_CURLY@2..3 "}"
    CURLY_GROUP@3..6
      L_CURLY@3..4 "{"
      ERROR@4..5
        R_BRACK@4..5 "]"
      R_CURLY@5..6 "}"

