crates/parser/src/snapshots/parser__latex__tests__parse@group__unmatched_braces.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/group/unmatched_braces.txt
---
ROOT@0..2
  PREAMBLE@0..2
    ERROR@0..1
      R_CURLY@0..1 "}"
    CURLY_GROUP@1..2
      L_CURLY@1..2 "{"

