crates/parser/src/snapshots/parser__latex__tests__parse@group__unmatched_brackets.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/group/unmatched_brackets.txt
---
ROOT@0..2
  PREAMBLE@0..2
    ERROR@0..1
      R_BRACK@0..1 "]"
    MIXED_GROUP@1..2
      L_BRACK@1..2 "["

