crates/parser/src/snapshots/parser__latex__tests__parse@group__unmatched_brackets_with_group.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/group/unmatched_brackets_with_group.txt
---
ROOT@0..4
  PREAMBLE@0..4
    CURLY_GROUP@0..4
      L_CURLY@0..1 "{"
      ERROR@1..2
        R_BRACK@1..2 "]"
      MIXED_GROUP@2..3
        L_BRACK@2..3 "["
      R_CURLY@3..4 "}"

